package edu.uees.patrones.builder;

/** Canal de notificacion preferido para una {@link Reserva}. */
public enum CanalNotificacion {
    EMAIL,
    SMS,
    PUSH,
    WHATSAPP
}
