package edu.uees.tutorias.domain;

/**
 * Modalidad en la que se realiza una tutoria. Campo opcional de
 * {@link Reserva} (ver {@link ReservaBuilder}).
 */
public enum Modalidad {
    PRESENCIAL,
    VIRTUAL
}
